add new section

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.imgur.com/sEHSovE.png" />
+    <link rel="icon" type="image/svg+xml" href="https://i.imgur.com/jAmGpBK.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <meta name="description" content="Astanza es una casa restauradora en la Ciudad de México que se especializa en la restauración de antigüedades y obras de arte, ofreciendo servicios profesionales en toda la República Mexicana.">
     <title>Astanza | Casa restauradora</title>
   </head>
